<resources>
    <string name="app_name">AndroidTransitions</string>
    <string name="scene_demo_title">Application</string>
    <string name="enter_def_anim">Enter default anim</string>
    <string name="hello">Hello</string>
    <string name="click_me">Click me!</string>
    <string name="sea">Sea</string>
    <string name="enter_no_anim">Enter no anim</string>
    <string name="enter_custom_anim">Enter custom anim</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="the_same_view">The same view</string>
    <string name="transition_overview">Transition Overview</string>
    <string name="scene_a">Scene A</string>
    <string name="scene_b">Scene B</string>
    <string name="scenea_view_only">SceneA view only</string>
    <string name="sceneb_view_only">SceneB view only</string>
    <string name="change_bounds">ChangeBounds</string>
    <string name="fade">Fade</string>
    <string name="slide">Slide</string>
    <string name="explode">Explode</string>
    <string name="change_bounds_plus_arc_motion">ChangeBounds + ArcMotion</string>
    <string name="change_bounds_plus_pattern_path_motion">ChangeBounds + PatternPathMotion</string>
    <string name="change_transform">ChangeTransform</string>
    <string name="change_image_transform">ChangeImageTransform</string>
    <string name="change_scroll">ChangeScroll</string>
    <string name="auto_transition">AutoTransition</string>
    <string name="change_clip_bounds">ChangeClipBounds</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activity_content_by_theme">Activity Content By Theme</string>
    <string name="fragments_content">Fragments Content</string>
    <string name="activity_content_programmatically">Activity Content Programmatically</string>
    <string name="shared_elements_fragments">Shared Elements Fragments</string>
    <string name="shared_elements_by_theme">Shared Elements by Theme</string>
    <string name="fragment_a">Fragment A</string>
    <string name="fragment_b">Fragment B</string>
    <string name="shared_element_triangle">shared_element_triangle</string>
    <string name="shared_element_triangle_2">shared_element_triangle_2</string>
    <string name="sample_root_transition_name">sample_root_transition_name</string>
    <string name="read_the_best_books">Read the best books!</string>
    <string name="books">Books</string>
    <string name="search_books">Search books</string>
</resources>
