<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screenstransition.ScreenTransitionsTopicActivity">

    <Button
        android:id="@+id/btFragmentsContentTransition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/fragments_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btActivityContentTransitionByTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/activity_content_by_theme"
        app:layout_constraintEnd_toEndOf="@+id/btFragmentsContentTransition"
        app:layout_constraintStart_toStartOf="@+id/btFragmentsContentTransition"
        app:layout_constraintTop_toBottomOf="@+id/btFragmentsContentTransition" />

    <Button
        android:id="@+id/btActivityContentTransitionProgrammatically"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/activity_content_programmatically"
        app:layout_constraintEnd_toEndOf="@+id/btActivityContentTransitionByTheme"
        app:layout_constraintStart_toStartOf="@+id/btActivityContentTransitionByTheme"
        app:layout_constraintTop_toBottomOf="@+id/btActivityContentTransitionByTheme" />

    <Button
        android:id="@+id/btSharedElementsFragments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/shared_elements_fragments"
        app:layout_constraintEnd_toEndOf="@+id/btActivityContentTransitionProgrammatically"
        app:layout_constraintStart_toStartOf="@+id/btActivityContentTransitionProgrammatically"
        app:layout_constraintTop_toBottomOf="@+id/btActivityContentTransitionProgrammatically" />

    <Button
        android:id="@+id/btSharedElementsActivityByTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/shared_elements_by_theme"
        app:layout_constraintEnd_toEndOf="@+id/btSharedElementsFragments"
        app:layout_constraintStart_toStartOf="@+id/btSharedElementsFragments"
        app:layout_constraintTop_toBottomOf="@+id/btSharedElementsFragments" />

    <Button
        android:id="@+id/btSharedElementsCallback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Shared Elements Callback"
        app:layout_constraintEnd_toEndOf="@+id/btSharedElementsActivityByTheme"
        app:layout_constraintStart_toStartOf="@+id/btSharedElementsActivityByTheme"
        app:layout_constraintTop_toBottomOf="@+id/btSharedElementsActivityByTheme" />
</android.support.constraint.ConstraintLayout>