<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".scene.samples.bylayoutid.ContentByLayoutIdSceneSampleActivity">

    <Button
        android:id="@+id/btEnterDefAnim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_def_anim"
        android:theme="@style/TextButton"
        app:layout_constraintStart_toStartOf="@+id/btEnterNoAnim"
        app:layout_constraintTop_toBottomOf="@+id/btEnterNoAnim" />

    <Button
        android:id="@+id/btEnterNoAnim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/enter_no_anim"
        android:theme="@style/TextButton"
        app:layout_constraintStart_toStartOf="@+id/cardView"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <Button
        android:id="@+id/btEnterCustomAnim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_custom_anim"
        android:theme="@style/TextButton"
        app:layout_constraintStart_toStartOf="@+id/btEnterDefAnim"
        app:layout_constraintTop_toBottomOf="@+id/btEnterDefAnim" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="1.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBack" />

    <ImageView
        android:id="@+id/ivClearContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ivBack"
        app:srcCompat="@drawable/ic_close" />
</android.support.constraint.ConstraintLayout>